# TeraSim

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DOCKER_SETUP_GUIDE.md  Dockerfile  README.md  README_DOCKER.md  convert_terasim_to_cosmos.py  docker-compose.yml  fix_opendrive_connections.py  generate_experiments.py  make.sh  pyOpenDRIVE_data_structure.md  pyproject.toml  run_experiments.py  run_experiments_debug.py  setup.py  setup_environment.sh  test_config.yaml  test_map_merge_split_fixed.xodr  test_stalled_object_fix.py  visualize_fcd.py  xodr_to_sumo_converter.py  xodr_to_sumo_converter_improved.py
.claude/agents/: map-comparison-analyzer.md
.github/workflows/: ci.yml  main.yml  python-package.yml
apps/deploy/: CLAUDE.md
configs/converter/: example.yaml  us_arizona_highwaycutin.yaml  us_chicago_uncoordinatedleftturn.yaml
configs/simulation/: Germany_Rossfeld_AggressiveMerge.yaml  US_AnnArbor_RoundaboutFailToYield.yaml  example.yaml  example_ann_arbor.yaml
configs/visulation/: Demo_AnnArborRoundabout.yaml  France_Paris_PedestrianCrossing.yaml  Germany_Rossfeld_AggressiveMerge.yaml  Mcity_CyclistCrossing.yaml  Mcity_PedestrianCrossing.yaml  Mcity_UnprotectedLeftTurn.yaml  US_AnnArbor_RoundaboutFailToYield.yaml  US_Arizona_HighwayCutin.yaml  US_Chicago_UncoordinatedLeftTurn.yaml  US_SanDiego_RunRedLight.yaml  example.yaml
docs/: OpenDRIVE_Format_Documentation.md  SUMO_PlainXML_Documentation.md  TeraSim_World.md  generate_experiments_usage.md
docs/source/: Getstarted.rst  Overview.rst  conf.py
docs/tutorials/: traffic_light_simulation.md
examples/: example.py  example_ABC_neuralnde.py  example_carla.py  example_carla_with_av.py  example_sumo_only.py  example_traffic_light.py  example_vehicle_life_cycle.py  test.py
examples/coordinates/: av_route_example.txt  us_cities.txt
examples/http_api/: terasim_request.rest
examples/scenarios/: Mcity_corner_case_generation.yaml  Mcity_safety_assessment.yaml  example_config.yaml  simulation_Mcity_carla_config.yaml  simulation_Town10CARLA_config.yaml
examples/scripts/: example_with_data_recorder.py  generate_experiments_example.sh
examples/xodr_sumo_maps/: README.md  test_map_merge_split.xodr
jupiter/eb/: .con.xml  .nod.xml  av_route.rou.xml  config_summary.txt  eb.con.xml  eb.nod.xml  eb_fixed.con.xml  eb_fixed.nod.xml  eb_test.con.xml  eb_test.nod.xml  jupiter_eb.con.xml  jupiter_eb.edg.xml  jupiter_eb.net.xml  jupiter_eb.nod.xml  lonlat_degree.yaml  map.net.xml  simulation.sumocfg  test_config.yaml  test_junction_48.con.xml  test_junction_48.nod.xml  test_junction_48_v2.con.xml  test_junction_48_v2.nod.xml  test_junction_48_v3.con.xml  test_junction_48_v3.nod.xml  test_junction_48_v4.con.xml  test_junction_48_v4.nod.xml  trips.trips.xml  vehicles.rou.xml
jupiter/wb/: jupiter_wb.con.xml  jupiter_wb.edg.xml  jupiter_wb.net.xml  jupiter_wb.nod.xml  pedestrians.rou.xml  simulation.sumocfg
mtlsp/: __init__.py  command_manager.py  overlay.py  simulator.py  state_manager.py  utils.py
mtlsp/envs/: base.py  template.py
mtlsp/physics/: __init__.py  base.py
mtlsp/vehicle/: vehicle.py
scripts/: IMPLEMENTATION_SUMMARY.md  TILED_CONVERSION_README.md  convert_terasim_to_cosmos.py  gen_case_NADE.py  gen_case_NADE_with_av.py  generate_experiments.py  run_experiments.py  run_experiments_debug.py  run_tests.sh  run_vis_gen.sh  test_tiled_conversion.sh  visualize_fcd.py  visualize_rds_hq.py  visualize_xodr_region.py  xodr_to_sumo_converter.py
terasim/: __init__.py  overlay.py  pipeline.py  simulator.py  state_manager.py  utils.py
terasim/agent/: agent.py  agent_controller.py  agent_decision_model.py  agent_sensor.py
terasim/envs/: __init__.py  base.py  base_complete.py  template.py  template_complete.py  template_remote.py  template_traffic_light.py
terasim/measure/: measure.py
terasim/network/: trafficnet.py
terasim/physics/: __init__.py  cosim.py  cosim_carla.py  cosim_ego.py  cosim_original.py  cosim_sumo.py  dummy.py  terasim_cosim_plugin.py
terasim/traffic_light/: traffic_light.py  traffic_light_controller.py  traffic_light_decision_model.py  traffic_light_factory.py  traffic_light_sensor.py
terasim/vehicle/: vehicle.py
terasim/vulnerable_road_user/: vulnerable_road_user.py
tests/: README.md  __init__.py  conftest.py  test_physics.py
tests/fixtures/: README.md
tests/test_core/: __init__.py
tests/test_envgen/: README.md  config.yaml  test_corner_case_generator.py  test_find_map_through_route.py  test_integrated_generator.py  (+11 more)
(+376 files in other folders)
