[project]
name = "terasim-monorepo"
version = "0.2.0"
description = "TeraSim Monorepo - Traffic simulation platform for autonomous vehicle testing"
authors = [
    {name = "Haowei Sun", email = "printfplus@outlook.com"},
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/terasim",
    "packages/terasim-nde-nade",
    "packages/terasim-service",
    "packages/terasim-envgen",
    "packages/terasim-datazoo",
    "packages/terasim-vis"
]

[tool.uv.sources]
# Use workspace packages during development
terasim = { workspace = true }
terasim-nde-nade = { workspace = true }
terasim-service = { workspace = true }
terasim-envgen = { workspace = true }
terasim-datazoo = { workspace = true }
terasim-vis = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.1",
    "isort>=5.12.0"
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "C90", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov-report=term-missing"